--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import re\n",
     "import os\n",
     "\n",
     "# Function to process each sheet\n",
@@ -36,47 +37,37 @@
     "    # Display for testing\n",
     "    print(f\"Processed sheet from header row {header_row}.\")\n",
     "\n",
-    "# Function to create or overwrite the workbook\n",
-    "def create_or_overwrite_workbook(file_path):\n",
-    "    # Check if the file exists\n",
-    "    if os.path.exists(file_path):\n",
-    "        os.remove(file_path)\n",
-    "        print(f\"File '{file_path}' already exists. It has been deleted and will be recreated.\")\n",
-    "    else:\n",
-    "        print(f\"File '{file_path}' does not exist. It will be created.\")\n",
-    "\n",
-    "    # Create an empty workbook to write processed sheets to\n",
-    "    with pd.ExcelWriter(file_path, engine='openpyxl') as writer:\n",
-    "        # An empty workbook is created at this point\n",
-    "        pass\n",
-    "\n",
     "# Main processing function\n",
     "def main():\n",
     "    # Get current year and month from user\n",
     "    current_year = input(\"Enter current year (e.g., 2024): \")\n",
     "    current_month = input(\"Enter current month (1-12): \")\n",
     "\n",
-    "    # Specify the file path where the processed file will be saved\n",
-    "    processed_file = 'processed_file.xlsx'\n",
+    "    # Define file paths\n",
+    "    excel_file = 'your_file.xlsx'  # Replace with your file path\n",
+    "    output_file = 'processed_file.xlsx'\n",
     "\n",
-    "    # Create or overwrite the workbook\n",
-    "    create_or_overwrite_workbook(processed_file)\n",
+    "    # Check if the output file exists; if so, delete it\n",
+    "    if os.path.exists(output_file):\n",
+    "        os.remove(output_file)\n",
+    "        print(f\"Deleted existing file: {output_file}\")\n",
+    "    else:\n",
+    "        print(f\"No existing file found. Creating a new one: {output_file}\")\n",
     "\n",
-    "    # Load the workbook\n",
-    "    excel_file = 'your_file.xlsx'  # Replace with your input file path\n",
+    "    # Load the workbook to process\n",
     "    xls = pd.ExcelFile(excel_file)\n",
     "    \n",
-    "    # Process each sheet\n",
-    "    for sheet_name in xls.sheet_names:\n",
-    "        if 'excl' not in sheet_name:\n",
-    "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "            process_sheet(sheet)\n",
+    "    # Process each sheet and write to a new workbook\n",
+    "    with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
+    "        for sheet_name in xls.sheet_names:\n",
+    "            if 'excl' not in sheet_name:\n",
+    "                sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "                process_sheet(sheet)\n",
     "\n",
-    "            # Save the processed sheet to the new workbook\n",
-    "            with pd.ExcelWriter(processed_file, engine='openpyxl', mode='a') as writer:\n",
+    "                # Save processed sheet to the new workbook\n",
     "                sheet.to_excel(writer, sheet_name=sheet_name, index=False)\n",
     "\n",
-    "    print(f\"Processing complete. Data saved to '{processed_file}'.\")\n",
+    "    print(f\"Workbook saved as: {output_file}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
