--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -10,32 +10,37 @@
     "import pandas as pd\n",
     "import re\n",
     "import os\n",
+    "import time\n",
     "\n",
     "# Function to process each sheet\n",
-    "def process_sheet(sheet):\n",
+    "def process_sheet(sheet, sheet_name):\n",
     "    # Find the header row\n",
     "    header_row = None\n",
     "    for index, row in sheet.iterrows():\n",
     "        if ('Entity' in row.values) and ('RTN Level 4' in row.values) and ('Account' in row.values):\n",
     "            header_row = index\n",
     "            break\n",
-    "    \n",
-    "    if header_row is None:\n",
-    "        print(\"Header not found in the sheet.\")\n",
-    "        return\n",
     "\n",
-    "    # Row above header\n",
+    "    if header_row is None:\n",
+    "        print(f\"Header not found in sheet '{sheet_name}'. Skipping this sheet.\")\n",
+    "        return None\n",
+    "\n",
+    "    print(f\"Found header row at index {header_row} in sheet '{sheet_name}'.\")\n",
+    "\n",
+    "    # Row above header (year row)\n",
     "    year_row = header_row - 1\n",
     "\n",
-    "    # Identify the Mxx, FY, and YTDxx columns and concatenate them with the row above\n",
+    "    # Process the sheet: concatenate year with the columns of type Mxx, FY, YTDxx\n",
     "    for col in sheet.columns:\n",
     "        if re.match(r'M\\d{2}', col) or col.startswith('FY') or re.match(r'YTD\\d{2}', col):\n",
     "            # Concatenate current cell with the one above\n",
     "            for idx in range(header_row + 1, len(sheet)):\n",
     "                sheet.at[idx, col] = f\"{sheet.at[year_row, col]} {sheet.at[idx, col]}\"\n",
     "\n",
-    "    # Display for testing\n",
-    "    print(f\"Processed sheet from header row {header_row}.\")\n",
+    "    # Remove rows above the header row\n",
+    "    sheet = sheet.iloc[header_row:].reset_index(drop=True)\n",
+    "\n",
+    "    return sheet\n",
     "\n",
     "# Main processing function\n",
     "def main():\n",
@@ -44,30 +49,58 @@
     "    current_month = input(\"Enter current month (1-12): \")\n",
     "\n",
     "    # Define file paths\n",
-    "    excel_file = 'your_file.xlsx'  # Replace with your file path\n",
+    "    input_excel_file = 'your_file.xlsx'  # Replace with your input file path\n",
     "    output_file = 'processed_file.xlsx'\n",
     "\n",
-    "    # Check if the output file exists; if so, delete it\n",
+    "    # Check if the output file exists; if so, delete it after closing it\n",
     "    if os.path.exists(output_file):\n",
-    "        os.remove(output_file)\n",
-    "        print(f\"Deleted existing file: {output_file}\")\n",
+    "        try:\n",
+    "            print(f\"Closing and deleting existing file: {output_file}\")\n",
+    "            time.sleep(0.5)  # Brief delay to ensure file is not locked\n",
+    "            os.remove(output_file)\n",
+    "            print(f\"Deleted existing file: {output_file}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error deleting the file: {e}\")\n",
+    "            return\n",
     "    else:\n",
     "        print(f\"No existing file found. Creating a new one: {output_file}\")\n",
     "\n",
+    "    # Check if the input file exists\n",
+    "    if not os.path.exists(input_excel_file):\n",
+    "        print(f\"Input file '{input_excel_file}' not found.\")\n",
+    "        return\n",
+    "\n",
     "    # Load the workbook to process\n",
-    "    xls = pd.ExcelFile(excel_file)\n",
-    "    \n",
+    "    try:\n",
+    "        xls = pd.ExcelFile(input_excel_file)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error loading Excel file: {e}\")\n",
+    "        return\n",
+    "\n",
     "    # Process each sheet and write to a new workbook\n",
-    "    with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
-    "        for sheet_name in xls.sheet_names:\n",
-    "            if 'excl' not in sheet_name:\n",
-    "                sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "                process_sheet(sheet)\n",
+    "    try:\n",
+    "        with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
+    "            for sheet_name in xls.sheet_names:\n",
+    "                # Skip sheets with 'excl', 'pivot', or 'tm1' in their names (case-insensitive)\n",
+    "                if re.search(r'(excl|pivot|tm1)', sheet_name, re.IGNORECASE):\n",
+    "                    print(f\"Skipping sheet '{sheet_name}' as it contains 'excl', 'pivot', or 'tm1'.\")\n",
+    "                    continue\n",
     "\n",
-    "                # Save processed sheet to the new workbook\n",
-    "                sheet.to_excel(writer, sheet_name=sheet_name, index=False)\n",
-    "\n",
-    "    print(f\"Workbook saved as: {output_file}\")\n",
+    "                try:\n",
+    "                    # Read the sheet\n",
+    "                    sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "                    \n",
+    "                    # Process the sheet\n",
+    "                    processed_sheet = process_sheet(sheet, sheet_name)\n",
+    "                    \n",
+    "                    # If processed successfully, write to the new workbook starting from row 1 (A1)\n",
+    "                    if processed_sheet is not None:\n",
+    "                        processed_sheet.to_excel(writer, sheet_name=sheet_name, index=False)\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Error processing sheet '{sheet_name}': {e}\")\n",
+    "        print(f\"Workbook saved as: {output_file}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error writing to Excel file: {e}\")\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
