--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -30,12 +30,10 @@
     "    # Row above header (year row)\n",
     "    year_row = header_row - 1\n",
     "\n",
-    "    # Process the sheet: concatenate year with the columns of type Mxx, FY, YTDxx\n",
-    "    for col in sheet.columns:\n",
-    "        if re.match(r'M\\d{2}', col) or col.startswith('FY') or re.match(r'YTD\\d{2}', col):\n",
-    "            # Concatenate current cell with the one above\n",
-    "            for idx in range(header_row + 1, len(sheet)):\n",
-    "                sheet.at[idx, col] = f\"{sheet.at[year_row, col]} {sheet.at[idx, col]}\"\n",
+    "    # Extract headers (Mxx, FY, YTDxx) from col D onwards and concatenate with the year row above\n",
+    "    for col in sheet.columns[3:]:  # Start from column D (index 3)\n",
+    "        # Concatenate the header with the value from the year row\n",
+    "        sheet.at[header_row, col] = f\"{sheet.at[header_row, col]} {sheet.at[year_row, col]}\"\n",
     "\n",
     "    # Remove rows above the header row\n",
     "    sheet = sheet.iloc[header_row:].reset_index(drop=True)\n",
