--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -9,99 +9,66 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "import os\n",
-    "import time\n",
+    "from openpyxl import Workbook\n",
     "\n",
-    "# Function to process each sheet\n",
-    "def process_sheet(sheet, sheet_name):\n",
-    "    # Find the header row\n",
-    "    header_row = None\n",
-    "    for index, row in sheet.iterrows():\n",
-    "        if ('Entity' in row.values) and ('RTN Level 4' in row.values) and ('Account' in row.values):\n",
-    "            header_row = index\n",
-    "            break\n",
+    "def month_number_to_name(month):\n",
+    "    \"\"\"Convert month number to abbreviated month name.\"\"\"\n",
+    "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
-    "    if header_row is None:\n",
-    "        print(f\"Header not found in sheet '{sheet_name}'. Skipping this sheet.\")\n",
-    "        return None\n",
+    "def get_monthly_data(sheet, current_month, current_year):\n",
+    "    month_columns = []\n",
+    "    for col in sheet.columns:\n",
+    "        if re.match(r'M\\d{2}|FY|YTD\\d{2}', col):\n",
+    "            month_columns.append(col)\n",
+    "    return month_columns\n",
     "\n",
-    "    print(f\"Found header row at index {header_row} in sheet '{sheet_name}'.\")\n",
+    "def process_paste_sheet(processed_file_path, current_month, current_year):\n",
+    "    # Load the processed file\n",
+    "    xls = pd.ExcelFile(processed_file_path)\n",
+    "    \n",
+    "    # Create a new workbook and the \"Paste\" sheet\n",
+    "    wb = Workbook()\n",
+    "    ws = wb.active\n",
+    "    ws.title = \"Paste\"\n",
     "\n",
-    "    # Row above header (year row)\n",
-    "    year_row = header_row - 1\n",
+    "    # Define the headers for the \"Paste\" sheet\n",
+    "    headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "               \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "               \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "               \"Function\", \"Mapped Country\", \"MICA\"]\n",
+    "    ws.append(headers)  # Write headers to the first row\n",
     "\n",
-    "    # Extract headers (Mxx, FY, YTDxx) from col D onwards and concatenate with the year row above\n",
-    "    for col in sheet.columns[3:]:  # Start from column D (index 3)\n",
-    "        # Concatenate the header with the value from the year row\n",
-    "        sheet.at[header_row, col] = f\"{sheet.at[header_row, col]} {sheet.at[year_row, col]}\"\n",
+    "    for sheet_name in xls.sheet_names:\n",
+    "        # Only process sheets with 'Actual' in the name\n",
+    "        if 'Actual' in sheet_name:\n",
+    "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "            month_columns = get_monthly_data(sheet, current_month, current_year)\n",
     "\n",
-    "    # Remove rows above the header row\n",
-    "    sheet = sheet.iloc[header_row:].reset_index(drop=True)\n",
+    "            for index, row in sheet.iterrows():\n",
+    "                entity = row.get('Entity', '')\n",
+    "                function = row.get('RTN Level 4', '')\n",
+    "                mica = row.get('Account', '')\n",
     "\n",
-    "    return sheet\n",
+    "                for month_col in month_columns:\n",
+    "                    if month_col.startswith('M'):\n",
+    "                        month_num = int(month_col[1:3])  # Extract month number (e.g., M04 → 4)\n",
+    "                        year = row.get(month_col, '')  # Get value for that month column\n",
+    "                        period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
     "\n",
-    "# Main processing function\n",
-    "def main():\n",
-    "    # Get current year and month from user\n",
-    "    current_year = input(\"Enter current year (e.g., 2024): \")\n",
-    "    current_month = input(\"Enter current month (1-12): \")\n",
+    "                        # Check if sheet name contains 'DC' or 'HC'\n",
+    "                        if 'DC' in sheet_name:\n",
+    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, year, '', '', '', '', entity, function, '', mica])\n",
+    "                        elif 'HC' in sheet_name:\n",
+    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, '', year, '', '', '', entity, function, '', mica])\n",
+    "    \n",
+    "    # Save the final workbook\n",
+    "    wb.save('final_output_file.xlsm')\n",
     "\n",
-    "    # Define file paths\n",
-    "    input_excel_file = 'your_file.xlsx'  # Replace with your input file path\n",
-    "    output_file = 'processed_file.xlsx'\n",
-    "\n",
-    "    # Check if the output file exists; if so, delete it after closing it\n",
-    "    if os.path.exists(output_file):\n",
-    "        try:\n",
-    "            print(f\"Closing and deleting existing file: {output_file}\")\n",
-    "            time.sleep(0.5)  # Brief delay to ensure file is not locked\n",
-    "            os.remove(output_file)\n",
-    "            print(f\"Deleted existing file: {output_file}\")\n",
-    "        except Exception as e:\n",
-    "            print(f\"Error deleting the file: {e}\")\n",
-    "            return\n",
-    "    else:\n",
-    "        print(f\"No existing file found. Creating a new one: {output_file}\")\n",
-    "\n",
-    "    # Check if the input file exists\n",
-    "    if not os.path.exists(input_excel_file):\n",
-    "        print(f\"Input file '{input_excel_file}' not found.\")\n",
-    "        return\n",
-    "\n",
-    "    # Load the workbook to process\n",
-    "    try:\n",
-    "        xls = pd.ExcelFile(input_excel_file)\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error loading Excel file: {e}\")\n",
-    "        return\n",
-    "\n",
-    "    # Process each sheet and write to a new workbook\n",
-    "    try:\n",
-    "        with pd.ExcelWriter(output_file, engine='openpyxl') as writer:\n",
-    "            for sheet_name in xls.sheet_names:\n",
-    "                # Skip sheets with 'excl', 'pivot', or 'tm1' in their names (case-insensitive)\n",
-    "                if re.search(r'(excl|pivot|tm1)', sheet_name, re.IGNORECASE):\n",
-    "                    print(f\"Skipping sheet '{sheet_name}' as it contains 'excl', 'pivot', or 'tm1'.\")\n",
-    "                    continue\n",
-    "\n",
-    "                try:\n",
-    "                    # Read the sheet\n",
-    "                    sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "                    \n",
-    "                    # Process the sheet\n",
-    "                    processed_sheet = process_sheet(sheet, sheet_name)\n",
-    "                    \n",
-    "                    # If processed successfully, write to the new workbook starting from row 1 (A1)\n",
-    "                    if processed_sheet is not None:\n",
-    "                        processed_sheet.to_excel(writer, sheet_name=sheet_name, index=False)\n",
-    "                except Exception as e:\n",
-    "                    print(f\"Error processing sheet '{sheet_name}': {e}\")\n",
-    "        print(f\"Workbook saved as: {output_file}\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error writing to Excel file: {e}\")\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()\n"
+    "# Example usage\n",
+    "current_month = 4  # April\n",
+    "current_year = 2024\n",
+    "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
+    "process_paste_sheet(processed_file_path, current_month, current_year)\n"
    ]
   }
  ],
