--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -16,10 +16,15 @@
     "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
     "def get_monthly_data(sheet, current_month, current_year):\n",
+    "    \"\"\"Return only the month columns corresponding to the last three months.\"\"\"\n",
     "    month_columns = []\n",
     "    for col in sheet.columns:\n",
-    "        if re.match(r'M\\d{2}|FY|YTD\\d{2}', col):\n",
-    "            month_columns.append(col)\n",
+    "        if re.match(r'M\\d{2}', col):\n",
+    "            month_num = int(col[1:3])  # Extract month number\n",
+    "            # Check if this column is one of the last three months\n",
+    "            if month_num in [(current_month - i) % 12 or 12 for i in range(3)]:\n",
+    "                month_columns.append(col)\n",
+    "    \n",
     "    return month_columns\n",
     "\n",
     "def process_paste_sheet(processed_file_path, current_month, current_year):\n",
@@ -52,14 +57,14 @@
     "                for month_col in month_columns:\n",
     "                    if month_col.startswith('M'):\n",
     "                        month_num = int(month_col[1:3])  # Extract month number (e.g., M04 → 4)\n",
-    "                        year = row.get(month_col, '')  # Get value for that month column\n",
+    "                        year = int(month_col[3:])  # Extract the year from the column name\n",
     "                        period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
     "\n",
     "                        # Check if sheet name contains 'DC' or 'HC'\n",
     "                        if 'DC' in sheet_name:\n",
-    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, year, '', '', '', '', entity, function, '', mica])\n",
+    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
     "                        elif 'HC' in sheet_name:\n",
-    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, '', year, '', '', '', entity, function, '', mica])\n",
+    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
     "    \n",
     "    # Save the final workbook\n",
     "    wb.save('final_output_file.xlsm')\n",
