--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -18,13 +18,23 @@
     "def get_monthly_data(sheet, current_month, current_year):\n",
     "    \"\"\"Return only the month columns corresponding to the last three months.\"\"\"\n",
     "    month_columns = []\n",
+    "    \n",
+    "    # Generate the last three month values and their corresponding years\n",
+    "    last_three_months = []\n",
+    "    for i in range(3):\n",
+    "        month = (current_month - i - 1) % 12 + 1  # 1-based month\n",
+    "        year = current_year - ((current_month - i - 1) // 12)  # Adjust year if needed\n",
+    "        last_three_months.append((month, year))\n",
+    "    \n",
     "    for col in sheet.columns:\n",
     "        if re.match(r'M\\d{2}', col):\n",
     "            month_num = int(col[1:3])  # Extract month number\n",
-    "            # Check if this column is one of the last three months\n",
-    "            if month_num in [(current_month - i) % 12 or 12 for i in range(3)]:\n",
+    "            year = int(col[3:])  # Extract year from the column name\n",
+    "            \n",
+    "            # Check if this column matches any of the last three months\n",
+    "            if (month_num, year) in last_three_months:\n",
     "                month_columns.append(col)\n",
-    "    \n",
+    "\n",
     "    return month_columns\n",
     "\n",
     "def process_paste_sheet(processed_file_path, current_month, current_year):\n",
@@ -67,11 +77,11 @@
     "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
     "    \n",
     "    # Save the final workbook\n",
-    "    wb.save('final_output_file.xlsm')\n",
+    "    wb.save('final_output_file.xlsx')\n",
     "\n",
     "# Example usage\n",
-    "current_month = 4  # April\n",
-    "current_year = 2024\n",
+    "current_month = 1  # January\n",
+    "current_year = 2025\n",
     "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
     "process_paste_sheet(processed_file_path, current_month, current_year)\n"
    ]
