--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -26,6 +26,8 @@
     "        year = current_year - ((current_month - i - 1) // 12)  # Adjust year if needed\n",
     "        last_three_months.append((month, year))\n",
     "    \n",
+    "    print(f\"Last Three Months: {last_three_months}\")  # Debugging output\n",
+    "\n",
     "    for col in sheet.columns:\n",
     "        if re.match(r'M\\d{2}', col):\n",
     "            month_num = int(col[1:3])  # Extract month number\n",
