--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -22,8 +22,9 @@
     "    # Generate the last three month values and their corresponding years\n",
     "    last_three_months = []\n",
     "    for i in range(3):\n",
-    "        month = (current_month - i - 1) % 12 + 1  # 1-based month\n",
-    "        year = current_year - ((current_month - i - 1) // 12)  # Adjust year if needed\n",
+    "        month_offset = (current_month - 1 - i)  # 0-based for calculations\n",
+    "        month = (month_offset % 12) + 1  # Wrap around to 1-12\n",
+    "        year = current_year + (month_offset // 12)  # Adjust year based on month offset\n",
     "        last_three_months.append((month, year))\n",
     "    \n",
     "    print(f\"Last Three Months: {last_three_months}\")  # Debugging output\n",
