--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -19,22 +19,19 @@
     "    \"\"\"Return only the month columns corresponding to the last three months.\"\"\"\n",
     "    month_columns = []\n",
     "    \n",
-    "    # Generate the last three month values and their corresponding years\n",
     "    last_three_months = []\n",
     "    for i in range(3):\n",
-    "        month_offset = (current_month - 1 - i)  # 0-based for calculations\n",
-    "        month = (month_offset % 12) + 1  # Wrap around to 1-12\n",
-    "        year = current_year + (month_offset // 12)  # Adjust year based on month offset\n",
+    "        month_offset = (current_month - 1 - i)\n",
+    "        month = (month_offset % 12) + 1\n",
+    "        year = current_year + (month_offset // 12)\n",
     "        last_three_months.append((month, year))\n",
     "    \n",
     "    print(f\"Last Three Months: {last_three_months}\")  # Debugging output\n",
     "\n",
     "    for col in sheet.columns:\n",
     "        if re.match(r'M\\d{2}', col):\n",
-    "            month_num = int(col[1:3])  # Extract month number\n",
-    "            year = int(col[3:])  # Extract year from the column name\n",
-    "            \n",
-    "            # Check if this column matches any of the last three months\n",
+    "            month_num = int(col[1:3])\n",
+    "            year = int(col[3:])\n",
     "            if (month_num, year) in last_three_months:\n",
     "                month_columns.append(col)\n",
     "\n",
@@ -61,6 +58,7 @@
     "        if 'Actual' in sheet_name:\n",
     "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "            month_columns = get_monthly_data(sheet, current_month, current_year)\n",
+    "            print(f\"Processing sheet: {sheet_name}, month columns: {month_columns}\")  # Debugging output\n",
     "\n",
     "            for index, row in sheet.iterrows():\n",
     "                entity = row.get('Entity', '')\n",
@@ -69,9 +67,12 @@
     "\n",
     "                for month_col in month_columns:\n",
     "                    if month_col.startswith('M'):\n",
-    "                        month_num = int(month_col[1:3])  # Extract month number (e.g., M04 → 4)\n",
-    "                        year = int(month_col[3:])  # Extract the year from the column name\n",
+    "                        month_num = int(month_col[1:3])\n",
+    "                        year = int(month_col[3:])\n",
     "                        period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
+    "\n",
+    "                        # Debugging output to check values\n",
+    "                        print(f\"Inserting into Paste Sheet: {sheet_name}, Period: {period_value}, Entity: {entity}, Function: {function}, MICA: {mica}, Value: {row[month_col]}\")\n",
     "\n",
     "                        # Check if sheet name contains 'DC' or 'HC'\n",
     "                        if 'DC' in sheet_name:\n",
