--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -35,6 +35,7 @@
     "            if (month_num, year) in last_three_months:\n",
     "                month_columns.append(col)\n",
     "\n",
+    "    print(f\"Identified Month Columns: {month_columns}\")  # Debugging output\n",
     "    return month_columns\n",
     "\n",
     "def process_paste_sheet(processed_file_path, current_month, current_year):\n",
@@ -54,7 +55,6 @@
     "    ws.append(headers)  # Write headers to the first row\n",
     "\n",
     "    for sheet_name in xls.sheet_names:\n",
-    "        # Only process sheets with 'Actual' in the name\n",
     "        if 'Actual' in sheet_name:\n",
     "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "            month_columns = get_monthly_data(sheet, current_month, current_year)\n",
@@ -71,14 +71,14 @@
     "                        year = int(month_col[3:])\n",
     "                        period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
     "\n",
-    "                        # Debugging output to check values\n",
-    "                        print(f\"Inserting into Paste Sheet: {sheet_name}, Period: {period_value}, Entity: {entity}, Function: {function}, MICA: {mica}, Value: {row[month_col]}\")\n",
-    "\n",
-    "                        # Check if sheet name contains 'DC' or 'HC'\n",
-    "                        if 'DC' in sheet_name:\n",
-    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
-    "                        elif 'HC' in sheet_name:\n",
-    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
+    "                        # Ensure we do not include January 2024 when current is January 2025\n",
+    "                        if not (current_month == 1 and year == 2024):\n",
+    "                            print(f\"Inserting into Paste Sheet: {sheet_name}, Period: {period_value}, Entity: {entity}, Function: {function}, MICA: {mica}, Value: {row[month_col]}\")\n",
+    "                            \n",
+    "                            if 'DC' in sheet_name:\n",
+    "                                ws.append([sheet_name, '', '', '', '', '', '', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
+    "                            elif 'HC' in sheet_name:\n",
+    "                                ws.append([sheet_name, '', '', '', '', '', '', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
     "    \n",
     "    # Save the final workbook\n",
     "    wb.save('final_output_file.xlsx')\n",
