--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -18,24 +18,13 @@
     "def get_monthly_data(sheet, current_month, current_year):\n",
     "    \"\"\"Return only the month columns corresponding to the last three months.\"\"\"\n",
     "    month_columns = []\n",
-    "    \n",
-    "    last_three_months = []\n",
-    "    for i in range(3):\n",
-    "        month_offset = (current_month - 1 - i)\n",
-    "        month = (month_offset % 12) + 1\n",
-    "        year = current_year + (month_offset // 12)\n",
-    "        last_three_months.append((month, year))\n",
-    "    \n",
-    "    print(f\"Last Three Months: {last_three_months}\")  # Debugging output\n",
-    "\n",
     "    for col in sheet.columns:\n",
     "        if re.match(r'M\\d{2}', col):\n",
-    "            month_num = int(col[1:3])\n",
-    "            year = int(col[3:])\n",
-    "            if (month_num, year) in last_three_months:\n",
+    "            month_num = int(col[1:3])  # Extract month number\n",
+    "            # Check if this column is one of the last three months\n",
+    "            if month_num in [(current_month - i) % 12 or 12 for i in range(3)]:\n",
     "                month_columns.append(col)\n",
-    "\n",
-    "    print(f\"Identified Month Columns: {month_columns}\")  # Debugging output\n",
+    "    \n",
     "    return month_columns\n",
     "\n",
     "def process_paste_sheet(processed_file_path, current_month, current_year):\n",
@@ -55,10 +44,10 @@
     "    ws.append(headers)  # Write headers to the first row\n",
     "\n",
     "    for sheet_name in xls.sheet_names:\n",
+    "        # Only process sheets with 'Actual' in the name\n",
     "        if 'Actual' in sheet_name:\n",
     "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "            month_columns = get_monthly_data(sheet, current_month, current_year)\n",
-    "            print(f\"Processing sheet: {sheet_name}, month columns: {month_columns}\")  # Debugging output\n",
     "\n",
     "            for index, row in sheet.iterrows():\n",
     "                entity = row.get('Entity', '')\n",
@@ -67,25 +56,22 @@
     "\n",
     "                for month_col in month_columns:\n",
     "                    if month_col.startswith('M'):\n",
-    "                        month_num = int(month_col[1:3])\n",
-    "                        year = int(month_col[3:])\n",
+    "                        month_num = int(month_col[1:3])  # Extract month number (e.g., M04 → 4)\n",
+    "                        year = int(month_col[3:])  # Extract the year from the column name\n",
     "                        period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
     "\n",
-    "                        # Ensure we do not include January 2024 when current is January 2025\n",
-    "                        if not (current_month == 1 and year == 2024):\n",
-    "                            print(f\"Inserting into Paste Sheet: {sheet_name}, Period: {period_value}, Entity: {entity}, Function: {function}, MICA: {mica}, Value: {row[month_col]}\")\n",
-    "                            \n",
-    "                            if 'DC' in sheet_name:\n",
-    "                                ws.append([sheet_name, '', '', '', '', '', '', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
-    "                            elif 'HC' in sheet_name:\n",
-    "                                ws.append([sheet_name, '', '', '', '', '', '', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
+    "                        # Check if sheet name contains 'DC' or 'HC'\n",
+    "                        if 'DC' in sheet_name:\n",
+    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
+    "                        elif 'HC' in sheet_name:\n",
+    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
     "    \n",
     "    # Save the final workbook\n",
-    "    wb.save('final_output_file.xlsx')\n",
+    "    wb.save('final_output_file.xlsm')\n",
     "\n",
     "# Example usage\n",
-    "current_month = 1  # January\n",
-    "current_year = 2025\n",
+    "current_month = 4  # April\n",
+    "current_year = 2024\n",
     "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
     "process_paste_sheet(processed_file_path, current_month, current_year)\n"
    ]
