--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -13,9 +13,10 @@
     "    last_three_months = get_last_three_months(current_month, current_year)\n",
     "\n",
     "    print(f\"Last Three Months: {last_three_months}\")  # Debugging output\n",
+    "    print(f\"Sheet Columns: {sheet.columns.tolist()}\")  # Print out the actual column names\n",
     "\n",
     "    for col in sheet.columns:\n",
-    "        match = re.match(r'M(\\d{2})(\\d{4})', col)  # Adjusted regex to capture month and year\n",
+    "        match = re.match(r'M(\\d{2})\\s*(\\d{4})', col)  # Adjusted regex to capture month and year\n",
     "        if match:\n",
     "            month_num = int(match.group(1))  # Extract month number\n",
     "            year = int(match.group(2))  # Extract year\n",
@@ -24,7 +25,54 @@
     "                month_columns.append(col)\n",
     "\n",
     "    print(f\"Identified Month Columns: {month_columns}\")  # Debugging output\n",
-    "    return month_columns\n"
+    "    return month_columns\n",
+    "\n",
+    "def process_paste_sheet(processed_file_path, current_month, current_year):\n",
+    "    # Load the processed file\n",
+    "    xls = pd.ExcelFile(processed_file_path)\n",
+    "    \n",
+    "    # Create a new workbook and the \"Paste\" sheet\n",
+    "    wb = Workbook()\n",
+    "    ws = wb.active\n",
+    "    ws.title = \"Paste\"\n",
+    "\n",
+    "    # Define the headers for the \"Paste\" sheet\n",
+    "    headers = [\"File Name\", \"Level 3\", \"Level 4\", \"Cost Grouping\", \"Cost Type\", \n",
+    "               \"Finance Region\", \"Attribute Type\", \"Period\", \"Cost\", \n",
+    "               \"FTE/Contractor\", \"Country\", \"Level 3.5\", \"Level 4.5\", \"Entity\", \n",
+    "               \"Function\", \"Mapped Country\", \"MICA\"]\n",
+    "    ws.append(headers)  # Write headers to the first row\n",
+    "\n",
+    "    for sheet_name in xls.sheet_names:\n",
+    "        if 'Actual' in sheet_name:\n",
+    "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
+    "            month_columns = get_monthly_data(sheet, current_month, current_year)\n",
+    "\n",
+    "            for index, row in sheet.iterrows():\n",
+    "                entity = row.get('Entity', '')\n",
+    "                function = row.get('RTN Level 4', '')\n",
+    "                mica = row.get('Account', '')\n",
+    "\n",
+    "                for month_col in month_columns:\n",
+    "                    if month_col.startswith('M'):\n",
+    "                        month_num = int(month_col[1:3])  # Extract month number\n",
+    "                        year = int(month_col[3:])  # Extract the year from the column name\n",
+    "                        period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"  # Format period\n",
+    "\n",
+    "                        # Check if sheet name contains 'DC' or 'HC'\n",
+    "                        if 'DC' in sheet_name:\n",
+    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, row[month_col], '', '', '', '', entity, function, '', mica])\n",
+    "                        elif 'HC' in sheet_name:\n",
+    "                            ws.append([sheet_name, '', '', '', '', '', '', period_value, '', row[month_col], '', '', '', entity, function, '', mica])\n",
+    "    \n",
+    "    # Save the final workbook\n",
+    "    wb.save('final_output_file.xlsx')\n",
+    "\n",
+    "# Example usage\n",
+    "current_month = 1  # Change to test with January or February\n",
+    "current_year = 2025\n",
+    "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
+    "process_paste_sheet(processed_file_path, current_month, current_year)\n"
    ]
   }
  ],
