--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -15,40 +15,6 @@
     "    \"\"\"Convert month number to abbreviated month name.\"\"\"\n",
     "    return [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"][month - 1]\n",
     "\n",
-    "def get_last_three_months(current_month, current_year):\n",
-    "    \"\"\"Return last three months data.\"\"\"\n",
-    "    months = []\n",
-    "    for i in range(3):\n",
-    "        month = (current_month - i) % 12\n",
-    "        year = current_year - (1 if month == 0 else 0)\n",
-    "        month = month if month != 0 else 12\n",
-    "        months.append((month, year))\n",
-    "    return months\n",
-    "\n",
-    "def get_monthly_data(sheet, current_month, current_year):\n",
-    "    \"\"\"Return the columns corresponding to the last three months.\"\"\"\n",
-    "    month_columns = []\n",
-    "    last_three_months = get_last_three_months(current_month, current_year)\n",
-    "\n",
-    "    for col in sheet.columns:\n",
-    "        if re.match(r'M\\d{2}', col):\n",
-    "            month_num = int(col[1:3])\n",
-    "            year = int(col[3:])\n",
-    "\n",
-    "            if (month_num, year) in last_three_months:\n",
-    "                month_columns.append(col)\n",
-    "\n",
-    "    return month_columns\n",
-    "\n",
-    "def get_ytd_data(sheet, current_month):\n",
-    "    \"\"\"Return sum of Mxx columns up to the current month for YTD calculations.\"\"\"\n",
-    "    month_columns = []\n",
-    "    for col in sheet.columns:\n",
-    "        if re.match(r'M\\d{2}', col):\n",
-    "            month_num = int(col[1:3])\n",
-    "            month_columns.append(col) if month_num <= current_month else None\n",
-    "    return month_columns\n",
-    "\n",
     "def process_paste_sheet(processed_file_path, current_month, current_year):\n",
     "    # Load the processed file\n",
     "    xls = pd.ExcelFile(processed_file_path)\n",
@@ -66,62 +32,91 @@
     "    ws.append(headers)  # Write headers to the first row\n",
     "\n",
     "    for sheet_name in xls.sheet_names:\n",
-    "        sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
-    "\n",
-    "        # Determine if it's a DC or HC sheet\n",
-    "        cost_type = 'Cost' if 'DC' in sheet_name else 'FTE/Contractor' if 'HC' in sheet_name else None\n",
-    "\n",
-    "        # Handle MoM for last three months\n",
+    "        # Process sheets containing 'Actual', 'Target', or 'Fcst'\n",
     "        if re.search(r'Actual|Target|Fcst', sheet_name, re.IGNORECASE):\n",
-    "            month_columns = get_last_three_months(current_month, current_year)\n",
+    "            sheet = pd.read_excel(xls, sheet_name=sheet_name)\n",
     "\n",
-    "            # For each month column, get data\n",
-    "            for month, year in month_columns:\n",
-    "                month_col_name = f'M{month:02d}{year}'\n",
-    "                if month_col_name in sheet.columns:\n",
-    "                    total = sheet[month_col_name].sum()\n",
-    "                    period_value = f\"{month_number_to_name(month)}-{str(year)[-2:]}\"\n",
-    "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, total if cost_type == 'Cost' else '', total if cost_type == 'FTE/Contractor' else '', '', '', '', '', '', '', ''])\n",
+    "            # Identify cost type\n",
+    "            cost_type = 'Cost' if 'DC' in sheet_name else 'FTE/Contractor'\n",
     "\n",
-    "        # Handle other attribute types\n",
-    "        if cost_type:\n",
-    "            if 'Target' in sheet_name:\n",
-    "                attribute_type = 'FY Target'\n",
-    "                fy_column = f'FY {current_year}'\n",
-    "                if fy_column in sheet.columns:\n",
-    "                    period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "                    ws.append([sheet_name, '', '', '', '', '', attribute_type, period_value, '', '', '', '', '', '', '', ''])\n",
-    "\n",
-    "            elif 'Fcst' in sheet_name:\n",
-    "                attribute_type = 'FY Forecast'\n",
-    "                fy_column = f'FY {current_year}'\n",
-    "                if fy_column in sheet.columns:\n",
-    "                    period_value = f\"Dec-{current_year}\"\n",
-    "                    ws.append([sheet_name, '', '', '', '', '', attribute_type, period_value, '', '', '', '', '', '', '', ''])\n",
-    "\n",
-    "            elif 'Actual' in sheet_name:\n",
-    "                attribute_type = 'YTD Actual'\n",
-    "                month_columns = get_ytd_data(sheet, current_month)\n",
-    "                total = sum(sheet[col] for col in month_columns if col in sheet.columns)\n",
+    "            # YTD Actual\n",
+    "            if 'Actual' in sheet_name:\n",
+    "                ytd_total = 0\n",
+    "                month_columns = [col for col in sheet.columns if re.match(r'M\\d{2}', col)]\n",
+    "                for month_col in month_columns:\n",
+    "                    month_num = int(month_col[1:3])\n",
+    "                    if month_num <= current_month:\n",
+    "                        ytd_total += sheet[month_col].sum() if sheet[month_col].notna().any() else 0\n",
     "\n",
     "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "                ws.append([sheet_name, '', '', '', '', '', attribute_type, period_value, total if cost_type == 'Cost' else '', total if cost_type == 'FTE/Contractor' else '', '', '', '', '', '', ''])\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, \n",
+    "                            ytd_total if cost_type == 'Cost' else '', \n",
+    "                            ytd_total if cost_type == 'FTE/Contractor' else '', \n",
+    "                            '', '', '', '', '', ''])\n",
     "\n",
-    "            # Handle Prior Year FY and YTD similarly...\n",
-    "            fy_column_prior = f'FY {current_year - 1}'\n",
-    "            if fy_column_prior in sheet.columns:\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'Prior Year FY', 'Dec-' + str(current_year - 1), sheet[fy_column_prior].sum(), '', '', '', '', '', '', ''])\n",
+    "            # FY Target\n",
+    "            elif 'Target' in sheet_name:\n",
+    "                fy_col = [col for col in sheet.columns if f'FY {current_year}' in col]\n",
+    "                for col in fy_col:\n",
+    "                    total = sheet[col].sum() if sheet[col].notna().any() else 0\n",
+    "                    period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
+    "                    ws.append([sheet_name, '', '', '', '', '', 'FY Target', period_value, \n",
+    "                                total if cost_type == 'Cost' else '', \n",
+    "                                total if cost_type == 'FTE/Contractor' else '', \n",
+    "                                '', '', '', '', '', ''])\n",
     "\n",
-    "            ytd_column_prior = f'YTD {current_year - 1}'\n",
-    "            if ytd_column_prior in sheet.columns:\n",
-    "                ws.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\", sheet[ytd_column_prior].sum(), '', '', '', '', '', '', ''])\n",
+    "            # FY Forecast\n",
+    "            elif 'Fcst' in sheet_name:\n",
+    "                fy_col = [col for col in sheet.columns if f'FY {current_year}' in col]\n",
+    "                for col in fy_col:\n",
+    "                    total = sheet[col].sum() if sheet[col].notna().any() else 0\n",
+    "                    period_value = f\"Dec-{str(current_year)[-2:]}\"  # Dec of the current year\n",
+    "                    ws.append([sheet_name, '', '', '', '', '', 'FY Forecast', period_value, \n",
+    "                                total if cost_type == 'Cost' else '', \n",
+    "                                total if cost_type == 'FTE/Contractor' else '', \n",
+    "                                '', '', '', '', '', ''])\n",
+    "\n",
+    "            # YTD Target and YTD Forecast\n",
+    "            for attribute_type in ['YTD Target', 'YTD Forecast']:\n",
+    "                month_columns = [col for col in sheet.columns if re.match(r'M\\d{2}', col)]\n",
+    "                ytd_total = 0\n",
+    "                for month_col in month_columns:\n",
+    "                    month_num = int(month_col[1:3])\n",
+    "                    if month_num <= current_month:\n",
+    "                        ytd_total += sheet[month_col].sum() if sheet[month_col].notna().any() else 0\n",
+    "\n",
+    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
+    "                ws.append([sheet_name, '', '', '', '', '', attribute_type, period_value, \n",
+    "                            ytd_total if cost_type == 'Cost' else '', \n",
+    "                            ytd_total if cost_type == 'FTE/Contractor' else '', \n",
+    "                            '', '', '', '', '', ''])\n",
+    "\n",
+    "            # Prior Year FY\n",
+    "            prior_year_fy_col = [col for col in sheet.columns if f'FY {current_year - 1}' in col]\n",
+    "            for col in prior_year_fy_col:\n",
+    "                total = sheet[col].sum() if sheet[col].notna().any() else 0\n",
+    "                period_value = f\"Dec-{str(current_year - 1)[-2:]}\"\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, \n",
+    "                            total if cost_type == 'Cost' else '', \n",
+    "                            total if cost_type == 'FTE/Contractor' else '', \n",
+    "                            '', '', '', '', '', ''])\n",
+    "\n",
+    "            # Prior Year YTD\n",
+    "            prior_year_ytd_col = [col for col in sheet.columns if f'YTD {current_year - 1}' in col]\n",
+    "            for col in prior_year_ytd_col:\n",
+    "                total = sheet[col].sum() if sheet[col].notna().any() else 0\n",
+    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\"\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, \n",
+    "                            total if cost_type == 'Cost' else '', \n",
+    "                            total if cost_type == 'FTE/Contractor' else '', \n",
+    "                            '', '', '', '', '', ''])\n",
     "\n",
     "    # Save the final workbook\n",
     "    wb.save('final_output_file.xlsx')\n",
     "\n",
     "# Example usage\n",
-    "current_month = 6  # June\n",
-    "current_year = 2024\n",
+    "current_month = 6  # Example: June\n",
+    "current_year = 2024  # Example: Current year\n",
     "processed_file_path = 'Processed_file.xlsx'  # Update with your file path\n",
     "process_paste_sheet(processed_file_path, current_month, current_year)\n"
    ]
