--- a/Creport.ipynb
+++ b/Creport.ipynb
@@ -39,76 +39,80 @@
     "            # Identify cost type\n",
     "            cost_type = 'Cost' if 'DC' in sheet_name else 'FTE/Contractor'\n",
     "\n",
-    "            # YTD Actual\n",
-    "            if 'Actual' in sheet_name:\n",
-    "                ytd_total = 0\n",
-    "                month_columns = [col for col in sheet.columns if re.match(r'M\\d{2}', col)]\n",
-    "                for month_col in month_columns:\n",
-    "                    month_num = int(month_col[1:3])\n",
-    "                    if month_num <= current_month:\n",
-    "                        ytd_total += sheet[month_col].sum() if sheet[month_col].notna().any() else 0\n",
+    "            # Handling MoM (Last 3 Months Data)\n",
+    "            month_columns = [col for col in sheet.columns if re.match(r'M\\d{2}', col)]\n",
+    "            for month_col in month_columns:\n",
+    "                month_num = int(month_col[1:3])\n",
+    "                year = int(month_col[3:]) if len(month_col) > 3 else current_year\n",
     "\n",
-    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
+    "                # Check if the month falls within the last 3 months\n",
+    "                if ((current_month - month_num) % 12 in [0, 1, 2]) and year == current_year:\n",
+    "                    period_value = f\"{month_number_to_name(month_num)}-{str(year)[-2:]}\"\n",
+    "                    ws.append([sheet_name, '', '', '', '', '', 'MoM', period_value, \n",
+    "                                sheet[month_col].sum() if cost_type == 'Cost' else '', \n",
+    "                                sheet[month_col].sum() if cost_type == 'FTE/Contractor' else '', \n",
+    "                                '', '', '', '', '', ''])\n",
+    "\n",
+    "            # Handling FY Target\n",
+    "            if 'Target' in sheet_name:\n",
+    "                fy_col = [col for col in sheet.columns if f'FY {current_year}' in col]\n",
+    "                for col in fy_col:\n",
+    "                    period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
+    "                    ws.append([sheet_name, '', '', '', '', '', 'FY Target', period_value, \n",
+    "                                sheet[col].sum() if cost_type == 'Cost' else '', \n",
+    "                                sheet[col].sum() if cost_type == 'FTE/Contractor' else '', \n",
+    "                                '', '', '', '', '', ''])\n",
+    "\n",
+    "            # Handling FY Forecast\n",
+    "            if 'Fcst' in sheet_name:\n",
+    "                fy_col = [col for col in sheet.columns if f'FY {current_year}' in col]\n",
+    "                for col in fy_col:\n",
+    "                    period_value = f\"Dec-{str(current_year)[-2:]}\"\n",
+    "                    ws.append([sheet_name, '', '', '', '', '', 'FY Forecast', period_value, \n",
+    "                                sheet[col].sum() if cost_type == 'Cost' else '', \n",
+    "                                sheet[col].sum() if cost_type == 'FTE/Contractor' else '', \n",
+    "                                '', '', '', '', '', ''])\n",
+    "\n",
+    "            # Handling YTD (YTD Target, YTD Forecast, YTD Actual)\n",
+    "            ytd_total = 0\n",
+    "            for month_col in month_columns:\n",
+    "                month_num = int(month_col[1:3])\n",
+    "                if month_num <= current_month:\n",
+    "                    ytd_total += sheet[month_col].sum() if sheet[month_col].notna().any() else 0\n",
+    "\n",
+    "            period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
+    "            if 'Target' in sheet_name:\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'YTD Target', period_value, \n",
+    "                            ytd_total if cost_type == 'Cost' else '', \n",
+    "                            ytd_total if cost_type == 'FTE/Contractor' else '', \n",
+    "                            '', '', '', '', '', ''])\n",
+    "            elif 'Fcst' in sheet_name:\n",
+    "                ws.append([sheet_name, '', '', '', '', '', 'YTD Forecast', period_value, \n",
+    "                            ytd_total if cost_type == 'Cost' else '', \n",
+    "                            ytd_total if cost_type == 'FTE/Contractor' else '', \n",
+    "                            '', '', '', '', '', ''])\n",
+    "            elif 'Actual' in sheet_name:\n",
     "                ws.append([sheet_name, '', '', '', '', '', 'YTD Actual', period_value, \n",
     "                            ytd_total if cost_type == 'Cost' else '', \n",
     "                            ytd_total if cost_type == 'FTE/Contractor' else '', \n",
     "                            '', '', '', '', '', ''])\n",
     "\n",
-    "            # FY Target\n",
-    "            elif 'Target' in sheet_name:\n",
-    "                fy_col = [col for col in sheet.columns if f'FY {current_year}' in col]\n",
-    "                for col in fy_col:\n",
-    "                    total = sheet[col].sum() if sheet[col].notna().any() else 0\n",
-    "                    period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "                    ws.append([sheet_name, '', '', '', '', '', 'FY Target', period_value, \n",
-    "                                total if cost_type == 'Cost' else '', \n",
-    "                                total if cost_type == 'FTE/Contractor' else '', \n",
-    "                                '', '', '', '', '', ''])\n",
-    "\n",
-    "            # FY Forecast\n",
-    "            elif 'Fcst' in sheet_name:\n",
-    "                fy_col = [col for col in sheet.columns if f'FY {current_year}' in col]\n",
-    "                for col in fy_col:\n",
-    "                    total = sheet[col].sum() if sheet[col].notna().any() else 0\n",
-    "                    period_value = f\"Dec-{str(current_year)[-2:]}\"  # Dec of the current year\n",
-    "                    ws.append([sheet_name, '', '', '', '', '', 'FY Forecast', period_value, \n",
-    "                                total if cost_type == 'Cost' else '', \n",
-    "                                total if cost_type == 'FTE/Contractor' else '', \n",
-    "                                '', '', '', '', '', ''])\n",
-    "\n",
-    "            # YTD Target and YTD Forecast\n",
-    "            for attribute_type in ['YTD Target', 'YTD Forecast']:\n",
-    "                month_columns = [col for col in sheet.columns if re.match(r'M\\d{2}', col)]\n",
-    "                ytd_total = 0\n",
-    "                for month_col in month_columns:\n",
-    "                    month_num = int(month_col[1:3])\n",
-    "                    if month_num <= current_month:\n",
-    "                        ytd_total += sheet[month_col].sum() if sheet[month_col].notna().any() else 0\n",
-    "\n",
-    "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year)[-2:]}\"\n",
-    "                ws.append([sheet_name, '', '', '', '', '', attribute_type, period_value, \n",
-    "                            ytd_total if cost_type == 'Cost' else '', \n",
-    "                            ytd_total if cost_type == 'FTE/Contractor' else '', \n",
-    "                            '', '', '', '', '', ''])\n",
-    "\n",
-    "            # Prior Year FY\n",
+    "            # Handling Prior Year FY\n",
     "            prior_year_fy_col = [col for col in sheet.columns if f'FY {current_year - 1}' in col]\n",
     "            for col in prior_year_fy_col:\n",
-    "                total = sheet[col].sum() if sheet[col].notna().any() else 0\n",
     "                period_value = f\"Dec-{str(current_year - 1)[-2:]}\"\n",
     "                ws.append([sheet_name, '', '', '', '', '', 'Prior Year FY', period_value, \n",
-    "                            total if cost_type == 'Cost' else '', \n",
-    "                            total if cost_type == 'FTE/Contractor' else '', \n",
+    "                            sheet[col].sum() if cost_type == 'Cost' else '', \n",
+    "                            sheet[col].sum() if cost_type == 'FTE/Contractor' else '', \n",
     "                            '', '', '', '', '', ''])\n",
     "\n",
-    "            # Prior Year YTD\n",
+    "            # Handling Prior Year YTD\n",
     "            prior_year_ytd_col = [col for col in sheet.columns if f'YTD {current_year - 1}' in col]\n",
     "            for col in prior_year_ytd_col:\n",
-    "                total = sheet[col].sum() if sheet[col].notna().any() else 0\n",
     "                period_value = f\"{month_number_to_name(current_month)}-{str(current_year - 1)[-2:]}\"\n",
     "                ws.append([sheet_name, '', '', '', '', '', 'Prior Year YTD', period_value, \n",
-    "                            total if cost_type == 'Cost' else '', \n",
-    "                            total if cost_type == 'FTE/Contractor' else '', \n",
+    "                            sheet[col].sum() if cost_type == 'Cost' else '', \n",
+    "                            sheet[col].sum() if cost_type == 'FTE/Contractor' else '', \n",
     "                            '', '', '', '', '', ''])\n",
     "\n",
     "    # Save the final workbook\n",
